[DSTEW-501] - POC
